<!-- The layout for each item in the RecyclerView -->
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp">

    <!-- Add other views as needed, such as radio buttons, text views, image views, etc. -->

    <CheckBox
        android:id="@+id/extraSauce"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="515dp"
        android:text="@string/specialty_pizza_extra_sauce" />

    <CheckBox
        android:id="@+id/extraCheese"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/extraSauce"
        android:layout_marginTop="-2dp"
        android:text="@string/specialty_pizza_extra_cheese" />

    <Button
        android:id="@+id/addToOrder"
        android:layout_width="147dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/price"
        android:layout_marginTop="7dp"
        android:text="@string/specialty_pizza_add_to_order" />

    <TextView
        android:id="@+id/price"
        android:layout_width="58dp"
        android:layout_height="33dp"
        android:layout_below="@id/extraCheese"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="211dp"
        android:text="@string/specialty_pizza_price" />

    <TextView
        android:id="@+id/textView21"
        android:layout_width="71dp"
        android:layout_height="34dp"
        android:layout_below="@+id/extraCheese"
        android:layout_alignParentStart="true"
        android:layout_marginStart="16dp"
        android:layout_marginTop="2dp"
        android:text="@string/specialty_pizza_price_title" />

    <ImageView
        android:id="@+id/pizzaPicture"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:scaleType="centerCrop"
        app:srcCompat="@drawable/pepperonipizza" />

    <Spinner
        android:id="@+id/quantitySpinner"
        android:layout_width="266dp"
        android:layout_height="50dp"
        android:layout_below="@+id/pizzaPicture"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="326dp"
        android:layout_marginEnd="2dp" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="76dp"
        android:layout_height="40dp"
        android:layout_below="@+id/pizzaPicture"
        android:layout_marginTop="340dp"
        android:layout_marginEnd="19dp"
        android:layout_toStartOf="@+id/quantitySpinner"
        android:text="@string/specialty_pizza_quantity" />

    <TextView
        android:id="@+id/pizzaName"
        android:layout_width="135dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="44dp"
        android:layout_marginTop="58dp"
        android:text="@string/specialty_pizza_pizza_name"
        android:textAllCaps="false"
        android:textSize="24sp" />

    <RadioGroup
        android:id="@+id/specialtyRadioButtonGroup"
        android:layout_width="130dp"
        android:layout_height="161dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="514dp"
        android:layout_marginEnd="55dp"
        app:layout_constraintStart_toStartOf="parent">

        <RadioButton
            android:id="@+id/specialtySmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/specialty_pizza_small" />

        <RadioButton
            android:id="@+id/specialtyMedium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialty_pizza_medium" />

        <RadioButton
            android:id="@+id/specialtyLarge"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/specialty_pizza_large" />
    </RadioGroup>

    <ListView
        android:id="@+id/toppings"
        android:layout_width="251dp"
        android:layout_height="290dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="145dp"
        android:layout_marginEnd="7dp" />

    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_below="@+id/pizzaName"
        android:layout_marginTop="170dp"
        android:layout_marginEnd="15dp"
        android:layout_toStartOf="@+id/toppings"
        android:text="@string/specialty_pizza_toppings"
        android:textSize="20sp" />
    <!-- Add other views as needed -->

</RelativeLayout>
