<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/BYO"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:layout_marginTop="164dp"
        android:layout_marginEnd="28dp"
        android:text="@string/button_byo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/StoreOrders"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginBottom="308dp"
        android:text="@string/button_store_orders"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/Special"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="164dp"
        android:text="@string/button_specialty"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Pizza App"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.082" />

    <Button
        android:id="@+id/CurrentOrder"
        android:layout_width="145dp"
        android:layout_height="79dp"
        android:layout_marginEnd="28dp"
        android:layout_marginBottom="308dp"
        android:text="@string/button_current_order"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>